@@ -1,9 +1,26 @@
+<?xml version="1.0"?>
+<!--
+  ~ Copyright (c) 2013-2015 Evolveum
+  ~
+  ~ Licensed under the Apache License, Version 2.0 (the "License");
+  ~ you may not use this file except in compliance with the License.
+  ~ You may obtain a copy of the License at
+  ~
+  ~     http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing, software
+  ~ distributed under the License is distributed on an "AS IS" BASIS,
+  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  ~ See the License for the specific language governing permissions and
+  ~ limitations under the License.
+  -->
+  
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>com.evolveum.midpoint</groupId>
     <artifactId>parent</artifactId>
-    <version>3.0</version>
+    <version>3.2-SNAPSHOT</version>
     <relativePath>../../build-system/pom.xml</relativePath>
   </parent>
   <artifactId>rest</artifactId>
@@ -26,42 +43,47 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.infra</groupId>
 			<artifactId>util</artifactId>
-			<version>3.0</version>
+			<version>3.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.infra</groupId>
 			<artifactId>common</artifactId>
-			<version>3.0</version>
+			<version>3.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>repo-api</artifactId>
-			<version>3.0</version>
+			<version>3.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.model</groupId>
 			<artifactId>model-impl</artifactId>
-			<version>3.0</version>
+			<version>3.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.provisioning</groupId>
 			<artifactId>provisioning-impl</artifactId>
-			<version>3.0</version>
+			<version>3.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>task-quartz-impl</artifactId>
-			<version>3.0</version>
+			<version>3.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>audit-impl</artifactId>
-			<version>3.0</version>
+			<version>3.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>repo-test-util</artifactId>
-			<version>3.0</version>
+			<version>3.2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.evolveum.midpoint.repo</groupId>
+			<artifactId>security-api</artifactId>
+			<version>3.2-SNAPSHOT</version>
 		</dependency>
 
 		<!-- TEST dependency -->
@@ -73,35 +95,41 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.tools</groupId>
 			<artifactId>test-ng</artifactId>
-			<version>3.0</version>
+			<version>3.2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.forgerock.openicf.connectors</groupId>
-			<artifactId>ldap-connector</artifactId>
+			<groupId>com.evolveum.midpoint.repo</groupId>
+			<artifactId>security-impl</artifactId>
+			<version>3.2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.forgerock.openicf.connectors</groupId>
-			<artifactId>databasetable-connector</artifactId>
+			<groupId>com.evolveum.polygon</groupId>
+            <artifactId>connector-ldap</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.evolveum.polygon</groupId>
+            <artifactId>connector-databasetable</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.infra</groupId>
 			<artifactId>test-util</artifactId>
-			<version>3.0</version>
+			<version>3.2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 		<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>repo-sql-impl</artifactId>
-			<version>3.0</version>
+			<version>3.2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.model</groupId>
 			<artifactId>model-test</artifactId>
-			<version>3.0</version>
+			<version>3.2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -112,7 +140,7 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>system-init</artifactId>
-			<version>3.0</version>
+			<version>3.2-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -131,10 +159,32 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-        <groupId>org.apache.cxf</groupId>
-        <artifactId>cxf-rt-transports-http-jetty</artifactId>
-        <version>${cxf.version}</version>
-    </dependency>
+	        <groupId>org.apache.cxf</groupId>
+	        <artifactId>cxf-core</artifactId>
+        </dependency>
+        <dependency>
+	        <groupId>org.apache.cxf</groupId>
+	        <artifactId>cxf-rt-transports-http-jetty</artifactId>
+	    </dependency>
+	    <dependency>
+		   <groupId>org.apache.cxf</groupId>
+		   <artifactId>cxf-rt-rs-client</artifactId>
+		</dependency>
 	</dependencies>
-  
+  	<profiles>
+		<profile>
+			<id>extratest</id>
+			<build>
+				<plugins>
+					<plugin>
+					  <artifactId>maven-surefire-plugin</artifactId>
+					  <configuration>
+					    <skip>false</skip>
+                        <argLine>-XX:MaxPermSize=256m</argLine>
+					  </configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
